--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -28,28 +28,40 @@
             <div class="splide__track">
                 <ul class="splide__list">
                     <li class="splide__slide">
-                        <img src="{% static 'main/images/main_slider/slide1.jpg' %}" alt="">
-                        <p class="hover_text">Открытие себя</p>
+                        <div class="image_wrapper">
+                            <img class="left" src="{% static 'main/images/main_slider/image1.jpg' %}" alt="">
+                            <p class="hover_text">Открытие себя</p>
+                        </div>
                     </li>
                     <li class="splide__slide">
-                        <img src="{% static 'main/images/main_slider/slide2.png' %}" alt="">
-                        <p class="hover_text">Открытие себя</p>
+                        <div class="image_wrapper">
+                            <img class="left" src="{% static 'main/images/main_slider/image2.jpg' %}" alt="">
+                            <p class="hover_text">Открытие себя</p>
+                        </div>
                     </li>
                     <li class="splide__slide">
-                        <img src="{% static 'main/images/main_slider/slide3.png' %}" alt="">
-                        <p class="hover_text">Открытие себя</p>
+                        <div class="image_wrapper">
+                            <img class="left" src="{% static 'main/images/main_slider/image3.jpg' %}" alt="">
+                            <p class="hover_text">Открытие себя</p>
+                        </div>
                     </li>
                     <li class="splide__slide">
-                        <img src="{% static 'main/images/main_slider/slide4.png' %}" alt="">
-                        <p class="hover_text">Открытие себя</p>
+                        <div class="image_wrapper">
+                            <img src="{% static 'main/images/main_slider/image4.jpg' %}" alt="">
+                            <p class="hover_text">Открытие себя</p>
+                        </div>
                     </li>
                     <li class="splide__slide">
-                        <img src="{% static 'main/images/main_slider/slide5.png' %}" alt="">
-                        <p class="hover_text">Открытие себя</p>
+                        <div class="image_wrapper">
+                            <img class="center" src="{% static 'main/images/main_slider/image5.jpg' %}" alt="">
+                            <p class="hover_text">Открытие себя</p>
+                        </div>
                     </li>
                     <li class="splide__slide">
-                        <img src="{% static 'main/images/main_slider/slide6.png' %}" alt="">
-                        <p class="hover_text">Открытие себя</p>
+                        <div class="image_wrapper">
+                            <img src="{% static 'main/images/main_slider/image6.jpg' %}" alt="">
+                            <p class="hover_text">Открытие себя</p>
+                        </div>
                     </li>
                 </ul>
             </div>
