--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -205,6 +205,7 @@ img {
   .chat_button {
     top: unset;
     bottom: 100px;
+    transform: translate(0, 0);
   }
 }
 @media screen and (min-width: 991px) {
@@ -216,14 +217,29 @@ img {
 
 .chat_modal {
   position: fixed;
-  right: 10px;
+  right: 0px;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-25%);
+  transform-origin: top;
   width: 285px;
   background-color: var(--brown);
   padding: 24px 30px;
   border-radius: 16px 0 0 16px;
   z-index: 100;
+  transition: 0.7s;
+  opacity: 0;
+  pointer-events: none;
+}
+@media screen and (max-width: 768px) {
+  .chat_modal {
+    top: unset;
+    bottom: 100px;
+    transform: translate(0, 0);
+  }
+}
+.chat_modal.open {
+  pointer-events: all;
+  opacity: 1;
 }
 .chat_modal h4 {
   font-weight: 600;
@@ -314,6 +330,7 @@ img {
   font-size: 16px;
   background-color: var(--white);
   border-radius: 10px !important;
+  resize: none;
 }
 .chat_modal .body .tab_content .form input::-moz-placeholder, .chat_modal .body .tab_content .form textarea::-moz-placeholder {
   color: var(--brown);
@@ -325,10 +342,34 @@ img {
   display: flex;
 }
 .chat_modal .button_block {
+  text-align: center;
+}
+.chat_modal .button_block button {
+  position: relative;
   font-size: 16px;
   font-weight: 600;
-  text-align: center;
   margin-top: 10px;
+  color: var(--white);
+}
+.chat_modal .button_block button:disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+.chat_modal .button_block button::before {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--white);
+  opacity: 0;
+  transition: 0.3s;
+}
+@media screen and (min-width: 993px) {
+  .chat_modal .button_block button:hover::before {
+    opacity: 1;
+  }
 }
 
 @keyframes Open {
