--- a/main/static/main/style.scss
+++ b/main/static/main/style.scss
@@ -152,6 +152,7 @@ img {
     @include common.mediaMaxWidth(768) {
         top: unset;
         bottom: 100px;
+        transform: translate(0, 0);
     }
 
     @include common.mediaMinWidth(991) {
@@ -164,14 +165,29 @@ img {
 
 .chat_modal {
     position: fixed;
-    right: 10px;
+    right: 0px;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-25%);
+    transform-origin: top;
     width: 285px;
     background-color: var(--brown);
     padding: 24px 30px;
     border-radius: 16px 0 0 16px;
     z-index: 100;
+    transition: 0.7s;
+    opacity: 0;
+    pointer-events: none;
+
+    @include common.mediaMaxWidth(768) {
+        top: unset;
+        bottom: 100px;
+        transform: translate(0, 0);
+    }
+
+    &.open {
+        pointer-events: all;
+        opacity: 1;
+    }
 
     & h4 {
         font-weight: 600;
@@ -273,6 +289,7 @@ img {
                     font-size: 16px;
                     background-color: var(--white);
                     border-radius: 10px !important;
+                    resize: none;
 
                     &::placeholder {
                         color: var(--brown);
@@ -287,10 +304,40 @@ img {
     }
 
     .button_block {
-        font-size: 16px;
-        font-weight: 600;
         text-align: center;
-        margin-top: 10px;
+
+        & button {
+            position: relative;
+            font-size: 16px;
+            font-weight: 600;
+            margin-top: 10px;
+            color: var(--white);
+
+            &:disabled {
+                opacity: 0.5;
+                pointer-events: none;
+            }
+
+            &::before {
+                content: '';
+                position: absolute;
+                bottom: -3px;
+                left: 0;
+                width: 100%;
+                height: 1px;
+                background-color: var(--white);
+                opacity: 0;
+                transition: 0.3s;
+            }
+
+            @include common.mediaMinWidth(993) {
+                &:hover {
+                    &::before {
+                        opacity: 1;
+                    }
+                }
+            }
+        }
     }
 }
 
