--- a/main/static/main/person_page/person_page.scss
+++ b/main/static/main/person_page/person_page.scss
@@ -301,3 +301,265 @@
     }
 }
 
+.person_middle {
+    width: 100%;
+    overflow: hidden;
+    margin-top: 80px;
+
+    .container {
+        display: grid;
+        grid-template-columns: 43fr 56fr;
+        gap: 4dvw;
+        align-items: center;
+
+        @include common.mediaMaxWidth(991) {
+            grid-template-columns: 20fr 46fr;
+        }
+
+        @include common.mediaMaxWidth(800) {
+
+        }
+
+        .image_block {
+            position: relative;
+
+            img {
+                width: 100%;
+                // position: absolute;
+                // top: 50%;
+                // left: 0;
+                // width: 150%;
+                // transform: translateX(-40%) translateY(-50%);
+                @include common.mediaMaxWidth(991) {
+                    width: 140%;
+                    transform: translateX(-50%);
+                }
+
+                @include common.mediaMaxWidth(800) {
+                    width: 180%;
+                }
+            }
+        }
+
+        .description {
+            font-size: 16px;
+            line-height: 130%;
+            display: flex;
+            flex-direction: column;
+            gap: 2ch;
+
+            @include common.mediaMaxWidth(800) {
+                display: none;
+            }
+
+            span {
+                font-weight: 600;
+            }
+        }
+
+        .stanislav_slider {
+            width: 100%;
+            display: none;
+            min-width: 10px;
+
+            @include common.mediaMaxWidth(800) {
+                display: block;
+            }
+
+            .splide__track {
+                position: relative;
+
+                .splide__list {
+                    height: unset;
+
+                    display: flex;
+                    height: auto;
+                }
+
+            }
+            .splide__slide {
+                width: 100%;
+                height: max-content;
+                font-size: 16px;
+                color: var(--green);
+                line-height: 130%;
+                height: 0;
+                overflow: hidden;
+
+                &.is-visible {
+                    height: auto;
+                }
+                span {
+                    font-weight: 600;
+                }
+
+                &.flex {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 2ch;
+                }
+            }
+
+            .splide__pagination {
+                position: static !important;
+            }
+
+            .splide__pagination__page {
+                margin-top: 10px;
+                width: 10px !important;
+                height: 10px !important;
+                background: transparent;
+                border: 1px solid var(--brown);
+
+                &.is-active {
+                    background-color: var(--brown);
+                    transform: scale(1) !important;
+                }
+            }
+        }
+    }
+}
+
+.person_bottom {
+    position: relative;
+    margin-top: 200px;
+
+    .main_decor {
+        position: absolute;
+        top: -95px;
+        left: -110px;
+        z-index: 1;
+        background-image: url('./../images/person_page/fire_decor.svg');
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        filter: blur(20px);
+        width: 300px;
+        height: 300px;
+    }
+
+    @include common.mediaMaxWidth(800) {
+        margin-top: 138px;
+    }
+    .head {
+        position: relative;
+        z-index: 2;
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+        align-items: flex-end;
+        margin-bottom: 60px;
+
+        h2 {
+            width: 100%;
+            max-width: 600px;
+            font-size: 24px;
+            font-family: var(--anticva);
+            line-height: 120%;
+        }
+
+        .decor {
+            img {
+                width: 106px;
+            }
+
+            @include common.mediaMaxWidth(800) {
+                display: none;
+            }
+        }
+    }
+
+    .grid {
+        position: relative;
+        z-index: 2;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 40px;
+        grid-auto-rows: 287px;
+        margin-bottom: 150px;
+
+        @include common.mediaMaxWidth(1100) {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        @include common.mediaMaxWidth(768) {
+            grid-template-columns: 1fr;
+        }
+
+        .grid_item {
+            position: relative;
+            border: 1px solid var(--brown);
+            border-radius: 16px;
+            padding: 16px;
+            z-index: 2;
+
+            .desc_decor  {
+                position: absolute;
+                width: 44px;
+                
+                &.top {
+                    top: 16px;
+                    right: 16px;
+                }
+
+                &.bottom {
+                    bottom: 16px;
+                    left: 16px;
+                }
+
+                &.center {
+                    bottom: 16px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                }
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            h3 {
+                font-size: 16px;
+                font-weight: 600;
+                line-height: 130%;
+            }
+
+            .grid_descripttion {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                margin-top: 25px;
+
+                &.mt37 {
+                    margin-top: 37px;
+                }
+
+                p {
+                    width: 100%;
+                    max-width: 280px;
+                    font-size: 16px;
+                    line-height: 130%;
+                }
+            }
+        }
+
+        .grid_decor {
+            position: relative;
+            display: none;
+
+            @include common.mediaMaxWidth(1100) {
+                display: block;
+            }
+
+            @include common.mediaMaxWidth(768) {
+                display: none;
+            }
+
+            img {
+                position: absolute;
+                top: -80px;
+                right: -16px;
+            }
+        }
+    }
+}
